# myRPC

./: CMakeLists.txt  README.md
example/: friend.proto  rpc.pb.cc  rpc.pb.h  rpc.proto  user.pb.cc  user.pb.h
example/callee/: CMakeLists.txt  userservice.cpp
example/callee/friend/: CMakeLists.txt  friendservice.cpp
example/callee/user/: CMakeLists.txt  connection.cpp  connectionpool.cpp  public.hpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  callservice.cpp
example/caller/friend/: CMakeLists.txt  callfriendservice.cpp
example/caller/user/: CMakeLists.txt  calluserservice.cpp
include/: rpc.pb.h  rpc.proto  rpcconfig.hpp  rpcheader.pb.h  rpcprovider.hpp  zookeeper.hpp
log/: 2024-11-22-log.txt
rsc/: rpc.conf  rpcheader.proto  user.proto
src/: CMakeLists.txt  logger.cpp  myrpc.cpp  rpc.pb.cc  rpcchannel.cpp  rpcconfig.cpp  rpccontroller.cpp  rpcheader.pb.cc  rpcprovider.cpp  zookeeper.cpp
src/callee/: CMakeLists.txt
src/callee/chat/: CMakeLists.txt  chatservice.cpp
src/callee/friend/: CMakeLists.txt  friendservice.cpp
src/callee/user/: CMakeLists.txt  userservice.cpp
src/caller/: CMakeLists.txt  calluserservice.cpp  client.cpp
src/include/: logger.hpp  myrpc.hpp  rpcchannel.hpp  rpccontroller.hpp
src/redis/: redis.cpp
